--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -64,7 +64,7 @@
         headers: headers,
       }
 
-      fetch("http:\/\/localhost:8080/log-grpc", body)
+      fetch({{print .BrokerURL "/log-grpc"}}, body)
       .then((response) => response.json())
       .then((data) => {
         sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -102,7 +102,7 @@
         headers: headers,
       }
 
-      fetch("http:\/\/localhost:8080/handle", body)
+      fetch({{print .BrokerURL "/handle"}}, body)
       .then((response) => response.json())
       .then((data) => {
         sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -137,7 +137,7 @@
         headers: headers,
       }
 
-      fetch("http:\/\/localhost:8080/handle", body)
+      fetch({{print .BrokerURL "/handle"}}, body)
       .then((response) => response.json())
       .then((data) => {
         sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -172,7 +172,7 @@
         headers: headers,
       }
 
-      fetch("http:\/\/localhost:8080/handle", body)
+      fetch({{print .BrokerURL "/handle"}}, body)
       .then((response) => response.json())
       .then((data) => {
         sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -195,7 +195,7 @@
 
       }
 
-      fetch("http:\/\/localhost:8080", body)
+      fetch({{.BrokerURL}}, body)
       .then((response) => response.json())
       .then((data) => {
         sent.innerHTML = "empty post request";
